--- a/booking.html
+++ b/booking.html
@@ -7,157 +7,150 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
-    .booking-container {
-      background: white;
-      max-width: 500px;
-      margin: auto;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
+    .form-container, .details-container {
+      background: white; padding: 20px; border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 500px; margin: 20px auto;
     }
-    .booking-container h2 { text-align: center; }
-    input, select, button {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+    input, select {
+      width: 100%; padding: 10px; margin: 8px 0; border-radius: 5px; border: 1px solid #ccc;
     }
-    button {
-      background: #28a745;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
+    button { 
+      padding: 10px 20px; background: #28a745; color: white; 
+      border: none; border-radius: 5px; cursor: pointer; margin-top: 10px;
     }
     button:hover { background: #218838; }
-    .receipt {
-      margin-top: 20px;
-      padding: 10px;
-      border: 2px dashed #999;
-      background: #fafafa;
-      display: none;
-    }
+    .details-container { display: none; }
+    .details-container h3 { margin-top: 0; }
+    .btn-download { background: #007bff; }
+    .btn-download:hover { background: #0069d9; }
+    .payment-info { display:none; background:#eef; padding:10px; border-radius:5px; margin-top:10px; }
+    .proof-upload { display:none; margin-top: 10px; }
   </style>
 </head>
 <body>
 
-<div class="booking-container" id="bookingSection">
-  <h2>Online Reservation</h2>
-  <form id="bookingForm">
-    <label>Full Name:</label>
-    <input type="text" name="fullName" placeholder="Enter Full Name" required>
-
-    <label>Number of People:</label>
-    <input type="number" name="numPeople" required>
-
-    <label>Room:</label>
-    <select name="roomName" required>
-      <option value="Deluxe Room">Deluxe Room</option>
-      <option value="Executive Suite">Executive Suite</option>
-      <option value="Family Room">Family Room</option>
-      <option value="Presidential Suite">Presidential Suite</option>
-    </select>
-
-    <label>Room Number:</label>
-    <input type="number" name="roomNo" placeholder="Enter Room Number" required>
-
-    <label>Select Date of Stay:</label>
-    <input type="date" name="dateStay" required>
-
-    <label>Number of Days to Stay:</label>
-    <input type="number" name="numDays" required>
-
-    <label>Payment Method:</label>
-    <select name="paymentMethod" id="paymentMethod" required>
-      <option value="">Select Payment Method</option>
-      <option value="Cash">Cash</option>
-      <option value="Online">Online Payment</option>
-    </select>
-
-    <div id="bankOptions" style="display:none;">
-      <label>Select Bank:</label>
-      <select name="bankSelect">
-        <option value="Gcash">GCASH - 09464766208</option>
-        <option value="Seabank">SEABANK - 19169025449</option>
-        <option value="PayPal">PayPal - jayveecaringal07@gmail.com</option>
+  <div class="form-container">
+    <h2>Online Reservation Form</h2>
+    <form id="bookingForm">
+      <input type="text" id="name" placeholder="Enter Full Name" required>
+      <input type="number" id="people" placeholder="Number of People" required>
+      <input type="date" id="date" required>
+      
+      <select id="payment" required>
+        <option value="">Select Payment Method</option>
+        <option value="Cash">Cash</option>
+        <option value="Gcash">Gcash</option>
+        <option value="Seabank">Seabank</option>
       </select>
-    </div>
 
-    <button type="submit">Confirm Booking</button>
-  </form>
+      <!-- Dynamic Payment Info -->
+      <div id="paymentInfo" class="payment-info"></div>
 
-  <div id="receipt" class="receipt">
-    <h3>Booking Confirmation</h3>
-    <p><strong>Room:</strong> <span id="rRoom"></span></p>
-    <p><strong>Room No:</strong> <span id="rRoomNo"></span></p>
-    <p><strong>Name:</strong> <span id="rName"></span></p>
-    <p><strong>Guests:</strong> <span id="rPeople"></span></p>
-    <p><strong>Date of Stay:</strong> <span id="rDate"></span></p>
-    <p><strong>Number of Days:</strong> <span id="rDays"></span></p>
-    <p><strong>Payment:</strong> <span id="rPayment"></span></p>
-    <p><strong>Bank:</strong> <span id="rBank or N/A"></span></p>
-    <button id="downloadReceipt">Download as PNG</button>
+      <!-- Upload Payment Proof -->
+      <div class="proof-upload" id="proofUpload">
+        <label><strong>Send Payment Proof:</strong></label>
+        <input type="file" id="paymentProof" accept="image/*">
+      </div>
+
+      <button type="submit">Confirm Booking</button>
+    </form>
   </div>
-</div>
+
+  <!-- Booking Details Box -->
+  <div class="details-container" id="detailsBox">
+    <h3>Booking Details</h3>
+    <p><strong>Name:</strong> <span id="dName"></span></p>
+    <p><strong>Number of People:</strong> <span id="dPeople"></span></p>
+    <p><strong>Date of Stay:</strong> <span id="dDate"></span></p>
+    <p><strong>Payment Method:</strong> <span id="dPayment"></span></p>
+    <p><strong>Payment Proof:</strong> <span id="dProof"></span></p>
+    
+    <button class="btn-download" onclick="downloadReceipt()">Download Receipt</button>
+  </div>
 
 <script>
-  // Show bank options for online payment
-  document.getElementById("paymentMethod").addEventListener("change", function() {
-    document.getElementById("bankOptions").style.display = this.value === "Online" ? "block" : "none";
+  const bookingForm = document.getElementById("bookingForm");
+  const detailsBox = document.getElementById("detailsBox");
+  const paymentSelect = document.getElementById("payment");
+  const paymentInfo = document.getElementById("paymentInfo");
+  const proofUpload = document.getElementById("proofUpload");
+  const paymentProofInput = document.getElementById("paymentProof");
+
+  // Show payment info & proof upload
+  paymentSelect.addEventListener("change", function() {
+    if (this.value === "Gcash") {
+      paymentInfo.style.display = "block";
+      paymentInfo.innerHTML = "<strong>Gcash:</strong> 09464766208 (E.C)";
+      proofUpload.style.display = "block";
+    } else if (this.value === "Seabank") {
+      paymentInfo.style.display = "block";
+      paymentInfo.innerHTML = "<strong>Seabank:</strong> 19169025449 (J.C)";
+      proofUpload.style.display = "block";
+    } else {
+      paymentInfo.style.display = "none";
+      proofUpload.style.display = "none";
+    }
   });
 
-  // Handle booking form submission
-  document.getElementById("bookingForm").addEventListener("submit", function(e) {
-    e.preventDefault();
-    const formData = new FormData(this);
+  // Handle Booking Submission
+  bookingForm.addEventListener("submit", function(event) {
+    event.preventDefault();
+
     const booking = {
-      fullName: formData.get("fullName"),
-      numPeople: formData.get("numPeople"),
-      roomName: formData.get("roomName"),
-      roomNo: formData.get("roomNo"),
-      dateStay: formData.get("dateStay"),
-      numDays: formData.get("numDays"),
-      paymentMethod: formData.get("paymentMethod"),
-      bank: formData.get("bankSelect") || "N/A",
-      timestamp: new Date().toLocaleString()
+      name: document.getElementById("name").value,
+      people: document.getElementById("people").value,
+      date: document.getElementById("date").value,
+      payment: document.getElementById("payment").value,
+      proof: ""
     };
 
-    // Check for duplicate booking (same room and date)
-    const bookings = JSON.parse(localStorage.getItem("bookings")) || [];
-    const duplicate = bookings.some(b => b.roomNo === booking.roomNo && b.dateStay === booking.dateStay);
-    if (duplicate) {
-      alert("❌ This room is already booked on the selected date.");
+    // Attach payment proof if uploaded
+    if (paymentProofInput.files.length > 0) {
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        booking.proof = e.target.result;
+        saveBooking(booking);
+      };
+      reader.readAsDataURL(paymentProofInput.files[0]);
+    } else {
+      saveBooking(booking);
+    }
+  });
+
+  // Save booking and display
+  function saveBooking(booking) {
+    // Check duplicate date
+    let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
+    if (bookings.some(b => b.date === booking.date)) {
+      alert("⚠️ Booking for this date already exists! Please choose another date.");
       return;
     }
 
-    // Save booking
     bookings.push(booking);
     localStorage.setItem("bookings", JSON.stringify(bookings));
 
-    // Show receipt
-    document.getElementById("rRoom").innerText = booking.roomName;
-    document.getElementById("rRoomNo").innerText = booking.roomNo;
-    document.getElementById("rName").innerText = booking.fullName;
-    document.getElementById("rPeople").innerText = booking.numPeople;
-    document.getElementById("rDate").innerText = booking.dateStay;
-    document.getElementById("rDays").innerText = booking.numDays;
-    document.getElementById("rPayment").innerText = booking.paymentMethod;
-    document.getElementById("rBank").innerText = booking.bank;
-    document.getElementById("receipt").style.display = "block";
-  });
+    // Display Details
+    document.getElementById("dName").innerText = booking.name;
+    document.getElementById("dPeople").innerText = booking.people;
+    document.getElementById("dDate").innerText = booking.date;
+    document.getElementById("dPayment").innerText = booking.payment;
+    document.getElementById("dProof").innerText = booking.proof ? "Proof Uploaded" : "No Proof";
 
-  // Download receipt as PNG
-  document.getElementById("downloadReceipt").addEventListener("click", function() {
-    html2canvas(document.getElementById("receipt")).then(canvas => {
+    detailsBox.style.display = "block";
+    alert("✅ Booking Confirmed!");
+  }
+
+  // Download Booking Receipt as PNG
+  function downloadReceipt() {
+    html2canvas(detailsBox).then(canvas => {
       const link = document.createElement("a");
-      link.download = "BookingReceipt.png";
+      link.download = "Booking_Receipt.png";
       link.href = canvas.toDataURL();
       link.click();
     });
-  });
+  }
 </script>
 
 </body>
-  </html>
+                                  </html>
