--- a/login.html
+++ b/login.html
@@ -3,94 +3,138 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Jayvee Hall</title>
+  <title>Login - Jayvee Hall of Mansion</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      background: #f4f4f4; 
-      display: flex; 
-      justify-content: center; 
-      align-items: center; 
-      height: 100vh; 
+    /* Fullscreen Background */
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
+      font-family: 'Arial', sans-serif;
+      color: #fff;
     }
-    .form-container {
-      background: white; 
-      padding: 20px; 
-      border-radius: 10px; 
-      box-shadow: 0 0 10px rgba(0,0,0,0.1); 
-      width: 300px;
+
+    /* Dark overlay */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.55);
+      z-index: 0;
+    }
+
+    /* Glassmorphic Login Card */
+    .login-container {
+      position: relative;
+      z-index: 1;
+      width: 90%;
+      max-width: 400px;
+      padding: 40px 30px;
+      border-radius: 15px;
       text-align: center;
+      background: rgba(255, 255, 255, 0.12);
+      backdrop-filter: blur(10px);
+      animation: fadeIn 1.3s ease-in-out;
     }
-    input {
-      width: 100%; 
-      padding: 10px; 
-      margin: 10px 0; 
-      border: 1px solid #ccc; 
-      border-radius: 5px;
+
+    .login-container h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #fff;
     }
-    button {
-      width: 100%; 
-      padding: 10px; 
-      margin: 10px 0; 
-      background: #28a745; 
-      color: white; 
-      border: none; 
-      border-radius: 5px;
+
+    .login-container input {
+      width: 100%;
+      padding: 12px 15px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      outline: none;
+    }
+
+    .login-container input[type="text"],
+    .login-container input[type="password"] {
+      background: rgba(255,255,255,0.85);
+      color: #333;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 12px 0;
+      margin-top: 15px;
+      font-size: 1rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      background: #007bff;
+      color: #fff;
       cursor: pointer;
+      transition: 0.3s;
     }
-    button:hover { background: #218838; }
-    .admin-btn { background: #007bff; }
-    .admin-btn:hover { background: #0069d9; }
+
+    .login-container button:hover {
+      background: #0056b3;
+      transform: scale(1.05);
+    }
+
+    .login-container p {
+      margin-top: 15px;
+      font-size: 0.9rem;
+    }
+
+    .login-container a {
+      color: #00c3ff;
+      text-decoration: none;
+    }
+
+    .login-container a:hover {
+      text-decoration: underline;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(30px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+
+    /* Mobile Responsive */
+    @media (max-width: 480px) {
+      .login-container {
+        padding: 30px 20px;
+      }
+      .login-container h2 {
+        font-size: 1.6rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="form-container">
-    <h2>Welcome to Jayvee Hall of Mansion Dashboard</h2>
-    <form id="loginForm">
-      <input type="text" id="username" placeholder="Enter Username" required>
-      <input type="password" id="password" placeholder="Enter Password" required>
-      <button type="submit">Login</button>
-      <button type="button" onclick="window.location.href='signup.html'">Register</button>
-      <button type="button" class="admin-btn" onclick="adminLogin()">Administrator</button>
-    </form>
+  <div class="login-container">
+    <h2>Admin Login</h2>
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button onclick="login()">Login</button>
+    <p><a href="index.html">← Back to Home</a></p>
   </div>
 
-<script>
-  // ✅ User Login Validation
-  document.getElementById("loginForm").addEventListener("submit", function(event) {
-    event.preventDefault();
-    
-    const username = document.getElementById("username").value.trim();
-    const password = document.getElementById("password").value.trim();
+  <script>
+    function login() {
+      const user = document.getElementById('username').value;
+      const pass = document.getElementById('password').value;
 
-    // Retrieve users from localStorage
-    const users = JSON.parse(localStorage.getItem("users")) || [];
-
-    // Check if credentials match any user
-    const validUser = users.find(u => u.username === username && u.password === password);
-
-    if (validUser) {
-      alert("✅ Login successful! Redirecting to Home...");
-      localStorage.setItem("currentUser", JSON.stringify(validUser));
-      window.location.href = "home.html";
-    } else {
-      alert("❌ Invalid username or password.");
+      // Simple local validation (replace with secure backend in production)
+      if (user === "00000","JHOM" && pass === "00000", "ADMIN") {
+        alert("Login successful!");
+        window.location.href = "admin.html";
+      } else {
+        alert("Invalid credentials. Try again.");
+      }
     }
-  });
-
-  // ✅ Admin Login
-  function adminLogin() {
-    const username = document.getElementById("username").value.trim();
-    const password = document.getElementById("password").value.trim();
-
-    if (username === "admin" && password === "admin123") {
-      alert("✅ Admin Login Successful!");
-      window.location.href = "admin.html";
-    } else {
-      alert("❌ Invalid Admin Credentials.");
-    }
-  }
-</script>
+  </script>
 </body>
-        </html>
+</html>
