--- a/login.html
+++ b/login.html
@@ -6,81 +6,92 @@
   <title>Login - Jayvee Hall of Mansion</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* Fullscreen Background */
     body {
       margin: 0;
       padding: 0;
       height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
-      background: url('assets/bgindex.jpg') no-repeat center center/cover;
+      align-items: center;
       font-family: 'Arial', sans-serif;
-      color: #fff;
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
     }
 
-    /* Dark overlay */
     body::before {
       content: "";
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.55);
+      background: rgba(0,0,0,0.6);
       z-index: 0;
     }
 
-    /* Glassmorphic Login Card */
     .login-container {
       position: relative;
       z-index: 1;
       width: 90%;
       max-width: 400px;
-      padding: 40px 30px;
+      padding: 30px;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(12px);
       border-radius: 15px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
       text-align: center;
-      background: rgba(255, 255, 255, 0.12);
-      backdrop-filter: blur(10px);
-      animation: fadeIn 1.3s ease-in-out;
+      color: #fff;
+      animation: fadeIn 1s ease-in-out;
     }
 
     .login-container h2 {
-      font-size: 2rem;
       margin-bottom: 20px;
-      color: #fff;
     }
 
     .login-container input {
-      width: 100%;
-      padding: 12px 15px;
+      width: 90%;
+      padding: 12px;
       margin: 10px 0;
       border: none;
       border-radius: 8px;
+      background: rgba(255,255,255,0.2);
+      color: #fff;
       font-size: 1rem;
       outline: none;
     }
 
-    .login-container input[type="text"],
-    .login-container input[type="password"] {
-      background: rgba(255,255,255,0.85);
-      color: #333;
+    .login-container input::placeholder {
+      color: rgba(255,255,255,0.7);
     }
 
     .login-container button {
-      width: 100%;
-      padding: 12px 0;
+      width: 95%;
+      padding: 12px;
       margin-top: 15px;
-      font-size: 1rem;
-      font-weight: bold;
+      background: #00c3ff;
       border: none;
       border-radius: 8px;
-      background: #007bff;
+      font-size: 1rem;
       color: #fff;
       cursor: pointer;
       transition: 0.3s;
     }
 
     .login-container button:hover {
-      background: #0056b3;
-      transform: scale(1.05);
+      background: #009bd1;
+    }
+
+    .forgot-btn {
+      width: 95%;
+      padding: 12px;
+      margin-top: 10px;
+      background: #ff6b6b;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      color: #fff;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .forgot-btn:hover {
+      background: #e25555;
     }
 
     .login-container p {
@@ -97,42 +108,82 @@
       text-decoration: underline;
     }
 
+    #error {
+      color: #ff6b6b;
+      font-size: 0.85rem;
+      margin-top: 10px;
+    }
+
     @keyframes fadeIn {
       from {opacity: 0; transform: translateY(30px);}
       to {opacity: 1; transform: translateY(0);}
-    }
-
-    /* Mobile Responsive */
-    @media (max-width: 480px) {
-      .login-container {
-        padding: 30px 20px;
-      }
-      .login-container h2 {
-        font-size: 1.6rem;
-      }
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h2>Admin Login</h2>
-    <input type="text" id="username" placeholder="Username" required>
+    <h2>Login</h2>
+    <input type="text" id="email" placeholder="Email" required>
     <input type="password" id="password" placeholder="Password" required>
     <button onclick="login()">Login</button>
-    <p><a href="index.html">← Back to Home</a></p>
+    <button class="forgot-btn" onclick="forgotPassword()">Forgot Password?</button>
+    <p>Don't have an account? <a href="register.html">Register</a></p>
+    <p id="error"></p>
   </div>
 
   <script>
-    function login() {
-      const user = document.getElementById('username').value;
-      const pass = document.getElementById('password').value;
+    // Ensure default admin exists
+    window.onload = function() {
+      let users = JSON.parse(localStorage.getItem("users")) || [];
 
-      // Simple local validation (replace with secure backend in production)
-      if (user === "00000","JHOM" && pass === "00000", "ADMIN") {
-        alert("Login successful!");
-        window.location.href = "admin.html";
+      if (!users.some(u => u.role === "admin")) {
+        users.push({
+          email: "admin@jhom.hotel",
+          password: "JHOM@ADMIN",
+          role: "Admin"
+        });
+        localStorage.setItem("users", JSON.stringify(users));
+      }
+    }
+
+    function login() {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const errorMsg = document.getElementById("error");
+
+      if (!email || !password) {
+        errorMsg.textContent = "Please fill in all fields.";
+        return;
+      }
+
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+      const user = users.find(u => u.email === email && u.password === password);
+
+      if (user) {
+        errorMsg.textContent = "";
+        localStorage.setItem("currentUser", JSON.stringify(user));
+
+        if (user.role && user.role === "admin") {
+          window.location.href = "admin.html";
+        } else {
+          window.location.href = "home.html";
+        }
       } else {
-        alert("Invalid credentials. Try again.");
+        errorMsg.textContent = "Invalid email or password.";
+      }
+    }
+
+    function forgotPassword() {
+      const emailPrompt = prompt("Enter your registered email to recover your password:");
+      if (!emailPrompt) return;
+
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+      const user = users.find(u => u.email === emailPrompt.trim());
+
+      if (user) {
+        alert(`Your password is: ${user.password}`);
+      } else {
+        alert("No account found with that email.");
       }
     }
   </script>
